<resources>
    <string name="app_name">Affiche</string>
    <string name="text_under_img">Лучшая цена</string>
    <string name="price_text">от 9 800 000 Р</string>
    <string name="under_price_count">554 подходящие квартиры от 40,80 м2</string>
    <string name="metro_name">Динамо</string>
    <string name="pedestrian_time">10 мин</string>
    <string name="place">Москва, Ленинградский проспект</string>
    <string name="img_text1">ЖК \"ВТБ Арена парк\"</string>
    <string name="img_text2">Сдача в 1 кв. 2019, есть сданные</string>
    <string name="img_pic_count">1/11</string>
    <string name="pro_text">PRO</string>
    <string name="importt">import</string>
    <string name="gallery">gallery</string>
    <string name="slideshow">slideshow</string>
    <string name="tools">tools</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
